samples/_failures_safe/1761538671_7a63af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05ecca55.c: In function ‘main’:
./samples/SAFE/__tmp_05ecca55.c:154:21: error: ‘comp’ undeclared (first use in this function)
  154 |     cleanup_buffer(&comp
      |                     ^~~~
./samples/SAFE/__tmp_05ecca55.c:154:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_05ecca55.c:154:25: error: expected ‘)’ at end of input
  154 |     cleanup_buffer(&comp
      |                   ~     ^
      |                         )
./samples/SAFE/__tmp_05ecca55.c:154:5: error: expected declaration or statement at end of input
  154 |     cleanup_buffer(&comp
      |     ^~~~~~~~~~~~~~
